--- a/indx.html
+++ b/indx.html
@@ -6,6 +6,9 @@
     <title>my third github repo</title>
 </head>
 <body>
-    
+    <h1>my third repo</h1>
+    <h2>ammu amake valobashe </h2>
+
+
 </body>
 </html>
