--- a/indx.html
+++ b/indx.html
@@ -8,7 +8,7 @@
 <body>
     <h1>my third repo</h1>
     <h2>ammu amake valobashe </h2>
-
+    <img src="P_20150923_130053.jpg" alt="">
 
 </body>
 </html>
