--- a/indx.html
+++ b/indx.html
@@ -3,12 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my third github repo</title>
+    <title>my third github repo some problem</title>
 </head>
 <body>
     <h1>my third repo</h1>
     <h2>ammu amake valobashe </h2>
     <img src="P_20150923_130053.jpg" alt="">
+<div>
+    <h3>my new blog</h3>
+    <p>my father name is Abul Kalam Azad</p>
+    <p>look mama ican write a new blog</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia assumenda repellendus reiciendis eligendi dolorem tempora veritatis labore similique nesciunt iste, laudantium ex facilis. Neque exercitationem quibusdam officia voluptatem iusto eligendi!</p>
+</div>
 
 </body>
 </html>
