--- a/indx.html
+++ b/indx.html
@@ -9,6 +9,8 @@
     <h1>my third repo</h1>
     <h2>ammu amake valobashe </h2>
     <img src="P_20150923_130053.jpg" alt="">
-
+<div>
+    <p>ami sir er basay jabo</p>
+</div>
 </body>
 </html>
